# hostsdottxt-dns-server

./: .dockerignore  Cargo.toml  Dockerfile  deploy.sh  docker-bake.hcl
pkg/DEBIAN/: control  postinst
pkg/usr/lib/systemd/system/: dns-server.service
src/: main.rs
